# boyle

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: gcc.yml
cmake/: third_party.cmake  utils.cmake
common/: CMakeLists.txt  dualism.hpp  road_graph_data.hpp
common/road_elements/: CMakeLists.txt  road_element.hpp
common/utils/: CMakeLists.txt  array_view.hpp  array_view_test.cpp  exec_on_exit.hpp  fsm.hpp  fsm_test.cpp  macros.hpp  tags.hpp
conf/personalized_files/: CMakePresets.json
kinetics/: CMakeLists.txt  border2.hpp  fence1.hpp  motion1.hpp  path2.hpp  route_line2.hpp
kinetics/models/: CMakeLists.txt  route_line_cubic_acc_model.cpp  route_line_cubic_acc_model.h  route_line_cubic_acc_model_test.cpp  route_line_quintic_acc_model.cpp  route_line_quintic_acc_model.h  route_line_quintic_acc_model_test.cpp
math/: CMakeLists.txt  concepts.hpp  cubic_interpolation.hpp  cubic_interpolation_test.cpp  duplet.hpp  eigen_serialization.hpp  quintic_interpolation.hpp  quintic_interpolation_test.cpp  triplet.hpp  utils.hpp  vec2.hpp  vec2_test.cpp  vec3.hpp  vec3_test.cpp
math/curves/: CMakeLists.txt  curve2.hpp
math/curves/piecewise_curves/: CMakeLists.txt  piecewise_cubic_curve2.hpp  piecewise_cubic_curve2_test.cpp  piecewise_linear_curve2.hpp  piecewise_linear_curve2_test.cpp  piecewise_quintic_curve2.hpp  piecewise_quintic_curve2_test.cpp
math/functions/: CMakeLists.txt  function1.hpp
math/functions/piecewise_functions/: CMakeLists.txt  piecewise_cubic_function1.hpp  piecewise_cubic_function1_test.cpp  piecewise_linear_function1.hpp  piecewise_linear_function1_test.cpp  piecewise_quintic_function1.hpp  piecewise_quintic_function1_test.cpp
math/qp_solvers/: CMakeLists.txt  osqp_solver.hpp  osqp_solver_test.cpp  qp_problem.hpp  qp_problem_test.cpp
math/sparse_matrix/: CMakeLists.txt  coo_matrix.hpp  coo_matrix_test.cpp  csc_matrix.hpp  csc_matrix_test.cpp  csr_matrix.hpp  csr_matrix_test.cpp  lil_matrix.hpp  lil_matrix_test.cpp  sparse_matrix.hpp
tasks/: CMakeLists.txt  task.hpp
tasks/optimizers/: CMakeLists.txt  path_optimizer.cpp  path_optimizer.h  route_line_builder.cpp  route_line_builder.h  speed_optimizer.cpp  speed_optimizer.h
workspaces/: CMakeLists.txt  common_workspace.hpp  common_workspace_test.cpp  config_workspace.hpp  lateral_workspace.hpp  longitudinal_workspace.hpp  prediction_workspace.hpp  signal_workspace.hpp  workspace.hpp
